[gd_scene load_steps=4 format=3 uid="uid://853hwkmelqcv"]

[ext_resource type="Script" path="res://Scenes/Game_Modes/Game_Mode_Smash_Down/Game_Mode_Smash_Down.gd" id="1_rlqyy"]

[sub_resource type="LabelSettings" id="LabelSettings_e7snr"]
font_size = 36

[sub_resource type="LabelSettings" id="LabelSettings_d578b"]
font_size = 36

[node name="Game_Mode_Smash_Down" type="Node"]
script = ExtResource("1_rlqyy")

[node name="UI" type="CanvasLayer" parent="."]

[node name="lbl_Timer" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -5.0
offset_right = 5.0
offset_bottom = 23.0
grow_horizontal = 2
text = "0"
label_settings = SubResource("LabelSettings_e7snr")

[node name="Left_Score" type="Label" parent="UI"]
offset_right = 40.0
offset_bottom = 23.0
text = "Team 1: 0"
label_settings = SubResource("LabelSettings_d578b")
vertical_alignment = 1

[node name="Right_Score" type="Label" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -166.0
offset_bottom = 50.0
grow_horizontal = 0
text = "Team 2: 0"
label_settings = SubResource("LabelSettings_d578b")
horizontal_alignment = 2
vertical_alignment = 1
